Use StandardEvalCtx in the ZeroMqMessageHandler
A simple one was used by mistake